--- a/.env.local
+++ b/.env.local
@@ -5,4 +5,4 @@ AUTHOR_NAME=Lido team
 AUTHOR_EMAIL=info@lido.fi
 TAGS=defi,liquidity,staking
 DESCRIPTION=Liquidity for staked assets
-GITHUB=https://descartesnetwork.github.io/senhub
+GITHUB=http://descartesnetwork.github.io/lido-iframe
