--- a/.env.local
+++ b/.env.local
@@ -1,8 +1,8 @@
 PORT=3000
 APP_ID=lido
 APP_NAME=Lido
-AUTHOR_NAME=Lido team
+AUTHOR_NAME=Lido Team
 AUTHOR_EMAIL=info@lido.fi
 TAGS=defi,liquidity,staking
 DESCRIPTION=Liquidity for staked assets
-GITHUB=http://descartesnetwork.github.io/lido-iframe
+GITHUB=https://descartesnetwork.github.io/lido-iframe
