--- a/package.json
+++ b/package.json
@@ -5,10 +5,8 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.0",
     "@senswap/sen-js": "^1.4.0",
-    "@sentre/antd-ionicon": "^1.0.36",
     "@sentre/embeded-view": "^1.0.36",
-    "@sentre/react-lazyload": "^3.2.2",
-    "@sentre/senhub": "^3.0.45",
+    "@sentre/senhub": "^3.1.13",
     "antd": "^4.21.1",
     "bn.js": "^5.2.0",
     "react": "^17.0.2",
@@ -16,19 +14,14 @@
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.3.0",
     "react-scripts": "^5.0.1",
-    "swr": "^1.3.0",
     "web-vitals": "^2.1.1"
   },
   "scripts": {
     "start": "craco start",
-    "build": "yarn build:production",
-    "build:production": "craco build",
-    "build:staging": "env-cmd -f .env.staging craco build",
+    "build": "craco build",
     "test": "craco test",
-    "predeploy": "yarn build:production",
-    "deploy": "gh-pages -d build",
-    "preserve": "yarn build:staging",
-    "serve": "serve -s build -l 3000"
+    "predeploy": "yarn build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -61,9 +54,7 @@
     "@types/react-dom": "^17.0.11",
     "@types/react-router-dom": "^5.3.1",
     "dotenv-cra": "^3.0.2",
-    "env-cmd": "^10.1.0",
     "gh-pages": "^3.2.3",
-    "serve": "^12.0.1",
     "typescript": "^4.5.2"
   }
 }
